# aero_srr_14_old

./: README.md
Sample_detection/sample_detection/: CMakeLists.txt
Sample_detection/training4_hook_data/: stage0.xml  stage1.xml  stage13.xml  stage15.xml  stage18.xml
aero_srr_bringup/: CMakeLists.txt  package.xml
aero_srr_bringup/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  local_planner.yaml
aero_srr_bringup/launch/: base.launch  level1.launch  rqt.launch  rviz.launch  srr_nav.launch
aero_srr_bringup/perspectives/: aero_diagnostics.perspective  aero_srr.rviz
aero_srr_nav/: CMakeLists.txt  move_slow_plugin.xml  package.xml
aero_srr_nav/src/: costmap_clearer.py  move_slow_recovery.cpp
aero_srr_sm/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
aero_srr_sm/src/: arm_pose_util.py  arm_state_util.py  arm_test_sm.py  detection_drive_state.py  detection_pickup_state.py  detection_state_util.py  drive_home_state.py  drive_test_sm.py  fake_state.py  level1.py  move_state_util.py  pause_test_sm.py  sensor_state_util.py  simple_publisher_state.py  sm.py  state_util.py
beacon_detector/: CMakeLists.txt  package.xml
beacon_detector/launch/: beacon_detector.launch
beacon_detector/src/: beacon_detector_node.cpp  beacon_transform_updater_node.cpp
sample_detection/: How_to_train_your_own_caascade.docx  package.xml
srr_carrot_planner/: CMakeLists.txt  package.xml
srr_search/: CMakeLists.txt  package.xml
srr_search/action/: SpiralSearch.action
vision/: CMakeLists.txt  nodelet_plugins.xml  package.xml
(+149 files in other folders)
