<?xml version="1.0"?>
<package>
  <name>aero_srr_bringup</name>
  <version>0.0.0</version>
  <description>The aero_srr_bringup package</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>aero_bringup</run_depend>
  <run_depend>base_local_planner</run_depend>


  <export>
  </export>
</package>